tools/compiler/OMRStatistics/doc/Errors Compiling OpenJ9 with Clang/i386/10
(Arch: I386): Compiling /home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/i386/codegen/J9CodeGenerator.cpp
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/i386/codegen/J9CodeGenerator.cpp:61:56: error: no type named 'IA32JNILinkage' in namespace 'TR'
            linkage = new (self()->trHeapMemory()) TR::IA32JNILinkage(self());
                                                   ~~~~^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/i386/codegen/J9CodeGenerator.cpp:73:56: error: no type named 'IA32J9SystemLinkage' in namespace 'TR'; did you mean 'S390SystemLinkage'?
            linkage = new (self()->trHeapMemory()) TR::IA32J9SystemLinkage(self());
                                                   ~~~~^~~~~~~~~~~~~~~~~~~
                                                       S390SystemLinkage
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/omr/compiler/compile/OMRMethod.hpp:43:22: note: 'S390SystemLinkage' declared here
namespace TR { class S390SystemLinkage; }
                     ^
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/compiler/trj9/x/i386/codegen/J9CodeGenerator.cpp:73:52: error: allocation of incomplete type 'TR::S390SystemLinkage'
            linkage = new (self()->trHeapMemory()) TR::IA32J9SystemLinkage(self());
                                                   ^~~~~~~~~~~~~~~~~~~~~~~
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/omr/compiler/compile/OMRMethod.hpp:43:22: note: forward declaration of 'TR::S390SystemLinkage'
namespace TR { class S390SystemLinkage; }
                     ^
3 errors generated.